Update Vercel configuration to correct destination key in rewrites
- Changed the "dest" key to "destination" in vercel.json for API request handling, ensuring compliance with Vercel's configuration standards.

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "dest": "/src/api/$1"
+      "destination": "/src/api/$1"
     }
   ],
   "headers": [
